services/image-analyzer/kubernetes/image-analyzer.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: image-analyzer-stateful
  labels:
    app: image-analyzer
spec:
  serviceName: image-analyzer
  replicas: 1
  selector:
    matchLabels:
      app: image-analyzer
  template:
    metadata:
      labels:
        app: image-analyzer
    spec:
      containers:
      - name: image-analyzer
        image: ghcr.io/swiss-ai-center/core-engine-image-analyzer:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
